--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,26 +1,34 @@
-version: "3.9"
-
 services:
-  web-test:
-    # depends_on:
-    #   - db-test
+  web:
     build:
-      context: ./spike-app
-      dockerfile: ../Dockerfile
+      context: .
+      target: prod
+    stdin_open: true
+    tty: true
     ports:
       - "8080:8080"
     volumes:
-      - ./spike-app:/app
+      - .:/app
+    environment:
+      - PORT=8080
+
+  # 開発環境
+  dev:
+    build:
+      context: .
+      target: dev
     stdin_open: true
     tty: true
+    working_dir: /app/spike-app
+    volumes:
+      - .:/app
 
-  # テスト用 DB サーバー
-  # db-test:
-  #   image: postgres:14-alpine
-  #   environment:
-  #     - POSTGRES_USER=postgres
-  #     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-  #     - POSTGRES_DB=spike-seed_test
-  #   volumes:
-  #     - db-test_data:/var/lib/postgresql/data
-  #   command: -p 5433
+  # GCP SDK
+  gcloud:
+    image: google/cloud-sdk:latest
+    stdin_open: true
+    tty: true
+    working_dir: /app
+    volumes:
+      - .:/app
+      - ./.gcloud-config:/root/.config/gcloud
