--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,7 @@
 services:
   web:
+    depends_on:
+      - db-prod
     build:
       context: .
       target: prod
@@ -12,6 +14,8 @@ services:
 
   # 開発環境
   dev:
+    depends_on:
+      - db-dev
     build:
       context: .
       target: dev
@@ -19,6 +23,30 @@ services:
     tty: true
     volumes:
       - ./spike-app:/spike-app
+
+  # 開発用DB
+  db-dev:
+    image: postgres:16-alpine
+    environment:
+      - POSTGRES_USER=spike
+      - POSTGRES_PASSWORD=spike
+      - POSTGRES_DB=spike_dev
+    ports:
+      - "5432:5432"
+    volumes:
+      - db-dev-data:/var/lib/postgresql/data
+
+  # 本番用DB
+  db-prod:
+    image: postgres:16-alpine
+    environment:
+      - POSTGRES_USER=spike
+      - POSTGRES_PASSWORD=spike
+      - POSTGRES_DB=spike_prod
+    ports:
+      - "5433:5432"
+    volumes:
+      - db-prod-data:/var/lib/postgresql/data
 
   # GCP SDK
   gcloud:
@@ -29,3 +57,7 @@ services:
     volumes:
       - .:/spike-app
       - ./.gcloud-config:/root/.config/gcloud
+
+volumes:
+  db-dev-data:
+  db-prod-data:
