--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 services:
-  web:
+  web-prod:
     depends_on:
       - db-prod
     build:
@@ -11,9 +11,13 @@ services:
       - "8080:8080"
     environment:
       - PORT=8080
+      - ENV=production
+      - POSTGRES_USER=spike
+      - POSTGRES_PASSWORD=spike
+      - POSTGRES_DB=spike_prod
 
   # 開発環境
-  dev:
+  web-dev:
     depends_on:
       - db-dev
     build:
@@ -21,8 +25,16 @@ services:
       target: dev
     stdin_open: true
     tty: true
+    ports:
+      - "8000:8000"
     volumes:
       - ./spike-app:/spike-app
+    environment:
+      - PORT=8000
+      - ENV=development
+      - POSTGRES_USER=spike
+      - POSTGRES_PASSWORD=spike
+      - POSTGRES_DB=spike_dev
 
   # 開発用DB
   db-dev:
@@ -32,7 +44,7 @@ services:
       - POSTGRES_PASSWORD=spike
       - POSTGRES_DB=spike_dev
     ports:
-      - "5432:5432"
+      - "5200:5432"
     volumes:
       - db-dev-data:/var/lib/postgresql/data
 
@@ -44,7 +56,7 @@ services:
       - POSTGRES_PASSWORD=spike
       - POSTGRES_DB=spike_prod
     ports:
-      - "5433:5432"
+      - "5432:5432"
     volumes:
       - db-prod-data:/var/lib/postgresql/data
 
