Add DB connection and all test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,29 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_PASSWORD: testpass
+          POSTGRES_USER: testuser
+          POSTGRES_DB: testdb
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
+    env:
+      DB_HOST: localhost
+      DB_PORT: 5432
+      DB_USER: testuser
+      DB_PASSWORD: testpass
+      DB_NAME: testdb
+      DB_SSLMODE: disable
+
     defaults:
       run:
         working-directory: spike-app
@@ -39,5 +62,5 @@ jobs:
       - name: Run go vet
         run: go vet ./...
 
-      - name: Run tests (unit tests only)
-        run: go test -v ./tests/hello_test.go
+      - name: Run all tests (including DB integration tests)
+        run: go test -v ./tests/...
