--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -24,6 +24,13 @@ jobs:
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
+          export_default_credentials: true
+
+      - name: Verify gcloud configuration
+        run: |
+          echo "Project ID: ${{ secrets.GCP_PROJECT_ID }}"
+          gcloud config list
+          gcloud auth list
 
       - name: Configure Docker for GCR
         run: gcloud auth configure-docker
@@ -37,7 +44,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          timeout 600s gcloud builds submit --tag ${{ env.IMAGE_TAG }}
+          echo "Building image: ${{ env.IMAGE_TAG }}"
+          timeout 600s gcloud builds submit --tag ${{ env.IMAGE_TAG }} --project ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Create secure environment variables file
         run: |
