--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -48,7 +48,8 @@ jobs:
       - name: Build and push Docker image
         run: |
           echo "Building image: ${{ env.IMAGE_TAG }}"
-          timeout 600s gcloud builds submit --tag ${{ env.IMAGE_TAG }} --project ${{ secrets.GCP_PROJECT_ID }}
+          docker build --target prod -t ${{ env.IMAGE_TAG }} .
+          docker push ${{ env.IMAGE_TAG }}
 
       - name: Create secure environment variables file
         run: |
