Refactor deployment step to use inline environment variables instead of a separate file

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -51,18 +51,6 @@ jobs:
           docker build --target prod -t ${{ env.IMAGE_TAG }} .
           docker push ${{ env.IMAGE_TAG }}
 
-      - name: Create secure environment variables file
-        run: |
-          cat << 'EOF' > .env.deploy
-          ENV=production
-          POSTGRES_USER=${{ secrets.PROD_DB_USER }}
-          POSTGRES_PASSWORD=${{ secrets.PROD_DB_PASSWORD }}
-          POSTGRES_DB=${{ secrets.PROD_DB_NAME }}
-          CLOUD_SQL_CONNECTION_NAME=${{ secrets.INSTANCE_CONNECTION_NAME }}
-          DATABASE_URL=${{ secrets.DATABASE_URL }}
-          EOF
-          chmod 600 .env.deploy
-
       - name: Deploy to Cloud Run
         run: |
           timeout 300s gcloud run deploy ${{ env.SERVICE_NAME }} \
@@ -71,12 +59,8 @@ jobs:
             --region ${{ env.REGION }} \
             --allow-unauthenticated \
             --add-cloudsql-instances ${{ secrets.INSTANCE_CONNECTION_NAME }} \
-            --env-vars-file .env.deploy \
+            --set-env-vars="ENV=production,POSTGRES_USER=${{ secrets.PROD_DB_USER }},POSTGRES_PASSWORD=${{ secrets.PROD_DB_PASSWORD }},POSTGRES_DB=${{ secrets.PROD_DB_NAME }},CLOUD_SQL_CONNECTION_NAME=${{ secrets.INSTANCE_CONNECTION_NAME }},DATABASE_URL=${{ secrets.DATABASE_URL }}" \
             --quiet
-
-      - name: Cleanup environment file
-        if: always()
-        run: rm -f .env.deploy
 
       - name: Get service URL
         id: get-url
