Add CI/CD pipeline documentation and update README for deployment adjustments

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,7 +13,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     # CIワークフローが成功した場合のみデプロイを実行
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' }}
 
     steps:
       - name: Checkout
@@ -43,7 +43,57 @@ jobs:
           echo "PROJECT_NAME=${{ secrets.PROJECT_NAME || 'spike-backend-gin' }}" >> $GITHUB_ENV
           echo "SERVICE_NAME=${{ secrets.SERVICE_NAME || 'spike-app' }}" >> $GITHUB_ENV
           echo "REGION=${{ secrets.REGION || 'asia-northeast1' }}" >> $GITHUB_ENV
+          echo "CLOUD_SQL_INSTANCE=spike-app" >> $GITHUB_ENV
           echo "IMAGE_TAG=gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.SERVICE_NAME || 'spike-app' }}:${{ github.sha }}" >> $GITHUB_ENV
+
+      - name: Check if Cloud SQL instance exists
+        id: check-instance
+        run: |
+          if gcloud sql instances describe ${{ env.CLOUD_SQL_INSTANCE }} --quiet 2>/dev/null; then
+            echo "instance-exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "instance-exists=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Create Cloud SQL instance (if not exists)
+        if: steps.check-instance.outputs.instance-exists == 'false'
+        run: |
+          gcloud sql instances create ${{ env.CLOUD_SQL_INSTANCE }} \
+            --database-version=POSTGRES_16 \
+            --tier=db-f1-micro \
+            --region=${{ env.REGION }} \
+            --authorized-networks=0.0.0.0/0 \
+            --backup-start-time=03:00 \
+            --enable-bin-log \
+            --maintenance-window-day=SUN \
+            --maintenance-window-hour=04
+        
+      - name: Wait for Cloud SQL instance to be ready
+        run: |
+          echo "Waiting for Cloud SQL instance to be ready..."
+          timeout 300s bash -c 'until gcloud sql instances describe ${{ env.CLOUD_SQL_INSTANCE }} --format="value(state)" | grep -q "RUNNABLE"; do sleep 10; done'
+
+      - name: Set Cloud SQL root password
+        run: |
+          gcloud sql users set-password root \
+            --host=% \
+            --instance=${{ env.CLOUD_SQL_INSTANCE }} \
+            --password=${{ secrets.PROD_DB_PASSWORD }}
+
+      - name: Create database user (if not exists)
+        run: |
+          if ! gcloud sql users list --instance=${{ env.CLOUD_SQL_INSTANCE }} --format="value(name)" | grep -q "^${{ secrets.PROD_DB_USER }}$"; then
+            gcloud sql users create ${{ secrets.PROD_DB_USER }} \
+              --instance=${{ env.CLOUD_SQL_INSTANCE }} \
+              --password=${{ secrets.PROD_DB_PASSWORD }}
+          fi
+
+      - name: Create database (if not exists)
+        run: |
+          if ! gcloud sql databases list --instance=${{ env.CLOUD_SQL_INSTANCE }} --format="value(name)" | grep -q "^${{ secrets.PROD_DB_NAME }}$"; then
+            gcloud sql databases create ${{ secrets.PROD_DB_NAME }} \
+              --instance=${{ env.CLOUD_SQL_INSTANCE }}
+          fi
 
       - name: Build and push Docker image
         run: |
