--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,19 @@
 name: CI
 
 on:
-  push:
-    branches: [main, develop]
   pull_request:
-    branches: [main, develop]
+    branches: [develop, main]
+    types: [opened, synchronize, reopened, ready_for_review]
+    paths-ignore:
+      - .github/workflows/cd.yml
+      - docs/**
+      - *.md
+  push:
+    branches: [main]
+    paths-ignore:
+      - .github/workflows/cd.yml
+      - docs/**
+      - *.md
 
 jobs:
   test:
